--- a/capstone-crud/src/app/manage-users/manage-users.component.html
+++ b/capstone-crud/src/app/manage-users/manage-users.component.html
@@ -4,8 +4,8 @@
       <form>
         <div class="header">
           <p>
-            <mat-icon fontIcon="manage_accounts" aria-hidden="false"> </mat-icon
-            >Users
+            <mat-icon fontIcon="manage_accounts" aria-hidden="false"> </mat-icon>
+            Users
           </p>
         </div>
         <div class="loader-container" *ngIf="!isResultLoaded">
@@ -30,68 +30,50 @@
         </thead>
         <tbody>
           <tr *ngFor="let user of users">
-            <td>{{ user.LastName }}</td>
-            <td>{{ user.FirstName }}</td>
-            <td>{{ user.StudentNum }}</td>
-            <td>{{ user.UserName }}</td>
             <td>
-              <ng-container *ngIf="!user.editingPassword; else editPassword">
-                {{ user.Password }}
-                <button type="button" (click)="toggleEditPassword(user)">
-                  Edit
-                </button>
-              </ng-container>
-              <ng-template #editPassword>
-                <input type="password" [(ngModel)]="user.Password" />
-                <button type="button" (click)="save()">
-                  Save
-                </button>
-                <button type="button" (click)="cancelEditPassword(user)">
-                  Cancel
-                </button>
-              </ng-template>
+              <input type="text" [(ngModel)]="user.LastName" />
             </td>
             <td>
-              <select
-                [(ngModel)]="user.AccessLevelID"
-                (change)="updateAccessLevel(user)"
-              >
-                <option
-                  *ngFor="let AccessItem of AccessLevels"
-                  [value]="AccessItem.AccessLevelID"
-                >
+              <input type="text" [(ngModel)]="user.FirstName" />
+            </td>
+            <td>
+              <input type="text" [(ngModel)]="user.StudentNum" />
+            </td>
+            <td>
+              <input type="text" [(ngModel)]="user.UserName" />
+            </td>
+            <td>
+              <input type="password" [(ngModel)]="user.Password" />
+            </td>
+            <td>
+              <select [(ngModel)]="user.AccessLevelID" (change)="updateAccessLevel(user)">
+                <option *ngFor="let AccessItem of AccessLevels" [value]="AccessItem.AccessLevelID">
                   {{ AccessItem.AccessName }}
                 </option>
               </select>
             </td>
-
             <td>
-              <button
-                type="button"
-                (click)="toggleActive(user)"
-                [class.active]="user.isActive === 1"
-                [class.inactive]="user.isActive === 0"
-              >
+              <button type="button" (click)="toggleActive(user)" [class.active]="user.isActive === 1"
+                [class.inactive]="user.isActive === 0">
                 {{ user.isActive ? "Active" : "Inactive" }}
               </button>
+            </td>
+            <td>
+              <button type="button" (click)="save()">Save</button>
             </td>
             <td class="table-button">
               <button type="button" (click)="setUpdate(user)">
                 <mat-icon fontIcon="edit" aria-hidden="false"></mat-icon>Edit
               </button>
               <button type="button" (click)="deleteUser(user)">
-                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon
-                >Delete
+                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon>Delete
               </button>
             </td>
           </tr>
         </tbody>
       </table>
       <div class="table-pagination-outer">
-        <pagination-controls
-          class="table-pagination-inner"
-          (pageChange)="p = $event"
-        ></pagination-controls>
+        <pagination-controls class="table-pagination-inner" (pageChange)="p = $event"></pagination-controls>
       </div>
     </div>
   </div>
