--- a/capstone-crud/src/app/facility-crud/facility-crud.component.html
+++ b/capstone-crud/src/app/facility-crud/facility-crud.component.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="container-button">
-          <button type="button" class="btn btn-danger" (click)="addRooms()">
+          <button type="submit" class="btn btn-danger" (click)="addRooms()">
             <mat-icon fontIcon="add" aria-hidden="false"> </mat-icon>
             Add
           </button>
