--- a/capstone-crud/src/app/manage-users/manage-users.component.html
+++ b/capstone-crud/src/app/manage-users/manage-users.component.html
@@ -43,7 +43,7 @@
               <input type="text" [(ngModel)]="user.UserName" />
             </td>
             <td>
-              <input type="password" [(ngModel)]="user.Password" />
+              <input type="text" [(ngModel)]="user.Password" />
             </td>
             <td>
               <select [(ngModel)]="user.AccessLevelID" (change)="updateAccessLevel(user)">
@@ -59,7 +59,7 @@
               </button>
             </td>
             <td>
-              <button type="button" (click)="save()">Save</button>
+              <button type="button" (click)="save(user)">Save</button>
             </td>
             <td class="table-button">
               <button type="button" (click)="setUpdate(user)">
