--- a/capstone-crud/src/app/login/login.component.css
+++ b/capstone-crud/src/app/login/login.component.css
@@ -1,233 +1,249 @@
 body {
-    height: 100%;
-  }
-  
-  .mat-simple-snackbar {
-    justify-content: center !important;
-  }
-  
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: url("/assets/mainbg.jpg") center center/cover no-repeat;
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-  
-  .outer-container .container .login-form .login-header {
-    margin-bottom: 30px;
-  }
-  
-  .login-form {
-    width: 300px;
-    margin-left: 30px;
-    text-align: center;
-    padding: 35px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #f3f3f3ee;
-  }
-  
-  .login-form label {
-    display: block;
-    margin-bottom: 8px;
-    text-align: left;
-  }
-  
-  .login-form input {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    -webkit-transition: 0.1s;
-    transition: 0.1s;
-    outline: none;
-  }
-  
-  input[type="text"]:focus {
-    border: 2px solid #993399;
-  }
-  
-  input[type="password"] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    -webkit-transition: 0.1s;
-    transition: 0.1s;
-    outline: none;
-  }
-  
-  input[type="password"]:focus {
-    border: 2px solid #993399;
-  }
-  
-  .login-form button {
-    width: 100%; /* Make the button 50% of the container width */
-    margin-top: 10px; /* Add margin to the top */
-    padding: 13px;
-    background-color: #993399; /* Green color, adjust as needed */
-    color: white;
-    border: none;
-    border-radius: 5px; /* Make the border radius 50% for a pill shape */
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: flex; /* Make the button a block-level element */
-    justify-content: center;
-    align-items: center;
-    margin-left: auto; /* Center the button horizontally */
-    margin-right: auto; /* Center the button horizontally */
-    font-size: 15px;
-  }
-  
-  .login-form button[type="button"] {
-    width: 100%; /* Make the button 50% of the container width */
-    margin-top: 10px; /* Add margin to the top */
-    padding: 13px;
-    background-color: #993399; /* Green color, adjust as needed */
-    color: white;
-    border: none;
-    border-radius: 5px; /* Make the border radius 50% for a pill shape */
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: flex; /* Make the button a block-level element */
-    justify-content: center;
-    align-items: center;
-    margin-left: auto; /* Center the button horizontally */
-    margin-right: auto; /* Center the button horizontally */
-    font-size: 15px;
-  }
-  
-  .login-form button:hover {
-    background-color: #660066; /* Darker green color on hover, adjust as needed */
-  }
-  
-  .cancel-button-div {
-    text-align: right;
-  }
-  
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Adjust the transparency as needed */
-    z-index: 1;
-  }
-  
-  .login-form a {
-    text-decoration: none;
-  }
-  
-  /* Modified styles for the image container and image */
-  .image-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column; /* Stack items vertically */
-    margin-right: 20px; /* Adjust the margin as needed */
-  }
-  
-  .image-container img {
-    max-width: 260px;
-    height: auto;
-    border-radius: 8px; /* Optional: Add border-radius for rounded corners */
-  }
-  
-  .text-container {
-    margin-top: 0px; /* Adjust the margin as needed */
-    text-align: center; /* Center the text */
-  }
-  
-  .text-container h2 {
-    margin-top: 10px; /* Adjust the margin as needed */
-    margin-bottom: 0px;
-    font-family: "Inter", sans-serif;
-    font-size: 50px;
-    font-weight: 700;
-    color: white;
-  }
-  
-  .text-container h3 {
-    margin-top: 0px; /* Adjust the margin as needed */
-    font-family: "Inter", sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
-  }
-  .text-container p {
-    margin-top: -10px; /* Adjust the margin as needed */
-    font-family: "Inter", sans-serif;
-    font-size: 12px;
-    color: white;
-  }
-  .form-check {
-    display: grid;
-    grid-template-rows: auto auto; /* Two rows, auto-sized */
-    align-items: center;
-  }
-  .form-check a {
-    color: var(--normal-color);
-    transition: 0.5;
-  }
-  
-  .form-check a:hover {
-    color: var(--darkest-color);
-    transform: scale(1.1);
-  }
-  
-  .form-check input[type="checkbox"] {
-    grid-row: 1; /* Place the checkbox in the first grid row */
-    grid-column: 2;
-    margin-top: 15px;
-    padding: 0px;
-    margin-left: -7px;
-  }
-  
-  .form-check label {
-    grid-row: 1; /* Place the label in the second grid row */
-    grid-column: 1;
-    text-align: left;
-    margin: 0px;
-    padding: 0px;
-    font-weight: 500;
-  }
-  
-  .outer-container .container .login-form .content mat-icon {
-    margin-left: 5px;
-    font-size: 20px;
-    width: 10%;
-    height: 100%;
-  }
-  
-  .outer-container .container .login-form .content .register-button a button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 35px;
-  }
-  
-  .outer-container
-    .container
-    .login-form
-    .content
-    button[type="button"]
-    mat-icon {
-    margin-left: -10px;
-    font-size: 20px;
-    width: 24%;
-    height: 100%;
-  }
+  height: 100%;
+}
+
+.mat-simple-snackbar {
+  justify-content: center !important;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: url("/assets/mainbg.jpg") center center/cover no-repeat;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.outer-container .container .login-form .login-header {
+  margin-bottom: 30px;
+}
+
+.login-form {
+  width: 300px;
+  margin-left: 30px;
+  text-align: center;
+  padding: 35px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #f3f3f3ee;
+}
+
+.login-form label {
+  display: block;
+  margin-bottom: 8px;
+  text-align: left;
+}
+
+.login-form input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  outline: none;
+}
+
+input[type="text"]:focus {
+  border: 2px solid #993399;
+}
+
+input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  outline: none;
+}
+
+input[type="password"]:focus {
+  border: 2px solid #993399;
+}
+
+.login-form button {
+  width: 100%;
+  margin-top: 10px;
+  padding: 13px;
+  background-color: #993399;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 15px;
+}
+
+.login-form button[type="button"] {
+  width: 100%;
+  margin-top: 10px;
+  padding: 13px;
+  background-color: #993399;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 15px;
+}
+
+.login-form button:hover {
+  background-color: #660066;
+}
+
+.cancel-button-div {
+  text-align: right;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.login-form a {
+  text-decoration: none;
+}
+
+.image-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.image-container img {
+  max-width: 260px;
+  height: auto;
+  border-radius: 8px;
+}
+
+.text-container {
+  margin-top: 0px;
+  text-align: center;
+}
+
+.text-container h2 {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  font-family: "Inter", sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  color: white;
+}
+
+.text-container h3 {
+  margin-top: 0px;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+}
+.text-container p {
+  margin-top: -10px;
+  font-family: "Inter", sans-serif;
+  font-size: 12px;
+  color: white;
+}
+.form-check {
+  display: grid;
+  grid-template-rows: auto auto;
+  align-items: center;
+}
+.form-check a {
+  color: var(--normal-color);
+  transition: 0.5;
+}
+
+.form-check a:hover {
+  color: var(--darkest-color);
+}
+
+.form-check input[type="checkbox"] {
+  grid-row: 1;
+  grid-column: 2;
+  margin-top: 15px;
+  padding: 0px;
+  margin-left: 3;
+  cursor: pointer;
+}
+
+.form-check .label-holder {
+  grid-row: 1;
+  grid-column: 1;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+  font-weight: 500;
+}
+
+.form-check label {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  font-size: 15px;
+}
+
+.form-check a {
+  display: flex;
+  flex-direction: row;
+  padding: 0px 2px;
+}
+
+.outer-container .container .login-form .content mat-icon {
+  margin-left: 5px;
+  font-size: 20px;
+  width: 10%;
+  height: 100%;
+}
+
+.outer-container .container .login-form .content .register-button a button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 35px;
+}
+
+.outer-container
+  .container
+  .login-form
+  .content
+  button[type="button"]
+  mat-icon {
+  margin-left: -10px;
+  font-size: 20px;
+  width: 24%;
+  height: 100%;
+}
+
+mat-icon#launch {
+  font-size: 17px;
+}
