--- a/capstone-crud/src/app/menu/menu.component.css
+++ b/capstone-crud/src/app/menu/menu.component.css
@@ -1,6 +1,6 @@
 /* Main background of all components */
 .mat-sidenav-content {
-  background: url("/assets/ccjef_last.jpg");
+  background: url("/assets/menu_bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
