--- a/capstone-crud/src/app/profile/profile.component.html
+++ b/capstone-crud/src/app/profile/profile.component.html
@@ -74,7 +74,7 @@
           </div>
           <div class="section-holder">
             <h4>Password</h4>
-            <p class="current-name">*******</p>
+            <p class="current-name">********</p>
           </div>
         </div>
       </div>
@@ -98,18 +98,27 @@
           </div>
           <div class="section-holder">
             <h4>Birthdate</h4>
-            <input type="date" [(ngModel)]="Birthdate" />
+            <input
+              type="date"
+              [(ngModel)]="Birthdate"
+              [ngModelOptions]="{ updateOn: 'blur' }"
+              (ngModelChange)="validateBirthdate()"
+              [class.error-text]="birthdateError !== ''"
+            />
+            <div *ngIf="birthdateError" class="error-message">
+              {{ birthdateError }}
+            </div>
           </div>
         </div>
 
         <div class="holdertwo">
           <div class="section-holder">
             <h4>Student Number</h4>
-            <input type="text" [(ngModel)]="StudentNum" />
+            <p class="current-name-notallowed">{{ currentUser?.StudentNum }}</p>
           </div>
           <div class="section-holder">
             <h4>UserName</h4>
-            <input type="text" [(ngModel)]="UserName" />
+            <p class="current-name-notallowed">{{ currentUser?.UserName }}</p>
           </div>
           <div class="section-holder">
             <h4>Password</h4>
